--- a/login.css
+++ b/login.css
@@ -59,6 +59,8 @@ form{
     z-index: 2;
 }
 .sign-up{
+    /* border:2px solid black; */
+    height: 500px;
     z-index: 1;
     opacity: 0;
 }
@@ -77,6 +79,11 @@ form{
     display: grid;
     grid-template-columns: 15% 85%;
     padding : 0 0.4rem;
+}
+span{
+    width:380px;
+    height: 20px;
+    /* border: 2px solid black; */
 }
 .input i{
     align-items: center;
@@ -217,94 +224,11 @@ form{
     z-index: 2;
     opacity: 1;
 }
-@media(max-width:870px){
-    .container{
-        min-height: 750px;
-        height: 100vh;
-    }
-    .container:before{
-        width: 1500px;
-        height: 1500px;
-        /* display: none; */
-        left: 30%;
-        bottom:63%;
-        transform: translateX(-50%);
-        top: initial;
-        right: initial;
-        transition: 2s ease-in-out;
-    }
-    .signin-signup{
-        width: 100%;
-        left: 50%;
-        top: 95%;
-        transform: translate(-50%, -100%);
-        transition: 1s 0.8s ease-in-out;
-    }
-    .panels-container{
-        z-index: 10;
-        /* background-color: red; */
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr 2fr 1fr; 
-    }
-    .panel{
-        flex-direction: row;
-        justify-content:center;
-        align-items: center;
-        padding: 2.5rem 8%;
-    }
-    .panel .content{
-        padding-right: 15%;
-        transition: 0.9s .8s ease-in-out;
-    }
-    .panel h3{
-        font-size: 1.3rem;
-    }
-    .panel p{
-        font-size: .8rem;
-        padding: 0.5rem 0;
-    }
-    .submit.transparent{
-        width: 110px;
-        height: 35px;
-        font-size:0.8rem ;
-    }
-    .left-panel{
-        grid-row: 1 / 2;
-    }
-    .right-panel{
-        grid-row: 3 / 4;
-    }
-    .right-panel .content{
-        padding-right: 25%;
-        transform: translateY(300px);
-    }
-    .container.sign_up_mode:before{ 
-        bottom: 32%;
-        right: initial;
-        transform: translate(-50%, 100%);
-    }
-    .container.sign_up_mode .left-panel .content{
-        transform: translateY(-300px);
-    }
-    .container.sign_up_mode .signin-signup{
-        top: 5%;
-        transform: translate(-50%, 0); 
-        left: 50%;
-    }
-}
-@media(max-width:570px){
-    form {
-        padding: 0 1.5rem;
-    }
-    .panel .content{
-        padding: 0.5rem 1rem;
-    }
-    .container::before{
-        bottom: 72%;
-        left: 50%;
-    }
-    .container.sign_up_mode:before{
-        bottom: 28%;
-        left: 50%;
-    }
+#signin-res,#signup-res{
+    /* border:3px solid black; */
+    padding-left: 20px;
+    max-width: 450px;
+    width: 100%;
+    max-height: 70px;;
+    height: 100%;
 }
